@@ -1,19 +1,20 @@
 package ru.nazarov.man.pre_project.services;
 
 import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.constraints.NotNull;
 import org.hibernate.Hibernate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.EmptyResultDataAccessException;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.nazarov.man.pre_project.dto.*;
+import ru.nazarov.man.pre_project.entities.Role;
 import ru.nazarov.man.pre_project.entities.User;
-import ru.nazarov.man.pre_project.repositories.RoleRepository;
-import ru.nazarov.man.pre_project.repositories.UserRepository;
+import ru.nazarov.man.pre_project.repositories.*;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -85,38 +86,47 @@ public class UserServiceImp implements UserService{
         userRepository.deleteAll();
     }
 
-    @Override
-    public UserResponseDto findDtoById(Long id) {
-        return null;
-    }
-
-    @Override
-    public UserResponseDto findDtoByUsername(String username) {
-        return null;
-    }
-
     // DTO
     @Override
     @Transactional(readOnly = true)
-    public UserResponseDto toDto(User user) {
-        UserResponseDto response = new UserResponseDto();
+    public UserResponseDto toDto(@NotNull User user) {
+        final UserResponseDto response = new UserResponseDto();
 
         response.setId(user.getId());
         response.setUsername(user.getUsername());
-        response.getRoles()
-                .stream()
-                .map(roleRepository::findById)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .collect(Collectors.toSet());
+        response.setRoles(
+                user.getRoles().stream()
+                        .map(Role::getId)
+                        .collect(Collectors.toSet())
+        );
 
         return response;
     }
 
     @Override
+    @Transactional(readOnly = true)
+    public UserResponseDto findDtoById(Long id) {
+        return userRepository.findById(id)
+                .map(this::toDto)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "User not found with ID: " + id
+                ));
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public UserResponseDto findDtoByUsername(String username) {
+        return userRepository.findByUsername(username)
+                .map(this::toDto)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "User not found with username: " + username
+                ));
+    }
+
+    @Override
     public UserResponseDto create(UserCreateRequestDto request) {
 
-        User user = new User();
+        final User user = new User();
 
         user.setUsername(request.getUsername());
         user.setPassword(passwordEncoder.encode(request.getPassword()));
@@ -137,7 +147,7 @@ public class UserServiceImp implements UserService{
     ) {
         Optional<User> userOptional = userRepository.findById(request.getId());
         User user = userRepository.findById(request.getId())
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + request.getId()));
+                .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + request.getId()));
 
         if (request.getPassword() != null && !request.getPassword().isEmpty()) {
             user.setPassword(passwordEncoder.encode(request.getPassword()));
@@ -154,12 +164,18 @@ public class UserServiceImp implements UserService{
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<UserResponseDto> getUsersDto() {
-        return List.of();
+        List<User> users = getAllUsers();
+        return users == null ? Collections.emptyList()
+                : users.stream().map(this::toDto).toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<UserResponseDto> getUsersDto(int pageNumber, int pageSize) {
-        return List.of();
+        List<User> users = getUsers(pageNumber, pageSize);
+        return users == null ? Collections.emptyList()
+                : users.stream().map(this::toDto).toList();
     }
 }
